[package]
name = "messagebox-iat-hook"
version = "0.1.0"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
libc = "*"
winapi = { version = "*", features = ["errhandlingapi", "libloaderapi", "memoryapi", "processthreadsapi", "windef", "winnt", "winuser"] }
